--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 class="home__education">Software Developer</h3>
 
                     <div class="home__button">
-                        <a download="" href="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\pdf\Yukta_Singh_Resume.pdf" class="button button--ghost">
+                        <a download="" href="assets\pdf\Yukta_Singh_Resume.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="home__handle">
-                    <img src="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\img\Home.jpeg" alt="" class="home__img">
+                    <img src="img\Home.jpeg" alt="" class="home__img">
                 </div>
 
                 <div class="home__social">
@@ -122,14 +122,15 @@
             <h2 class="section__title">About Me</h2>
 
             <div class="about__container container grid">
-                <img src="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\img\About.webp" alt="" class="about__img">
+                <img src="img\About.webp" alt="" class="about__img">
+                
 
                 <div class="about__data">
                     <div class="about__info">
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">IT Fourth Year</h3>
-                            <span class="about__subtitle">Pesuing...</span>
+                            <span class="about__subtitle">Pusuing...</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
@@ -473,7 +474,7 @@ comprehensive solution for job seekers.
 
             <div class="work__container container grid">
                 <div class="work__card mix web">
-                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+                    <img src="img\work1.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Web Design</h3>
 
@@ -483,7 +484,7 @@ comprehensive solution for job seekers.
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work2.jpg" alt="" class="work__img">
+                    <img src="img\work2.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Web Development</h3>
 
@@ -493,7 +494,7 @@ comprehensive solution for job seekers.
                 </div>
 
                 <div class="work__card mix design">
-                    <img src="assets/img/work3.jpg" alt="" class="work__img">
+                    <img src="img\work3.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Web Design</h3>
 
@@ -503,7 +504,7 @@ comprehensive solution for job seekers.
                 </div>
 
                 <div class="work__card mix web">
-                    <img src="assets/img/work4.jpg" alt="" class="work__img">
+                    <img src="img\work4.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Web Design</h3>
 
@@ -513,7 +514,7 @@ comprehensive solution for job seekers.
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+                    <img src="img\work5.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Web Development</h3>
 
@@ -533,7 +534,7 @@ comprehensive solution for job seekers.
             <div class="testimonial__container container swiper">
                 <div class="swiper-wrapper">
                     <div class="testimonial__card swiper-slide">
-                        <img src="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\img\testimonial1.jpeg" alt="" class="testimonial__img">
+                        <img src="img\testimonial1.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Priyanshu Kuldeep</h3>
                         <p class="testimonial__description">
@@ -543,7 +544,7 @@ comprehensive solution for job seekers.
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\img\testimonials2.jpeg" alt="" class="testimonial__img">
+                        <img src="img\testimonials2.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Matangi Singh</h3>
                         <p class="testimonial__description">
@@ -552,7 +553,7 @@ comprehensive solution for job seekers.
                     </div>
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="C:\Users\dell\Desktop\YUKKKI\hailee-portfolio-website\assets\img\testimonial3.jpeg" alt="" class="testimonial__img">
+                        <img src="img\testimonial3.jpeg" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Guddu Patel</h3>
                         <p class="testimonial__description">
