--- a/index.html
+++ b/index.html
@@ -538,8 +538,9 @@ comprehensive solution for job seekers.
 
                         <h3 class="testimonial__name">Priyanshu Kuldeep</h3>
                         <p class="testimonial__description">
-                            A really good job, all aspects of the project were done well.
-                            Very creative and thoughtful. I was very impressed and would recommend this to anyone.
+                            Outstanding performance! Every element of the project was executed with excellence. The creativity and thoughtfulness surpassed my expectations. I am highly impressed and would enthusiastically recommend it to anyone.
+
+
                         </p>
                     </div>
 
@@ -548,7 +549,8 @@ comprehensive solution for job seekers.
 
                         <h3 class="testimonial__name">Matangi Singh</h3>
                         <p class="testimonial__description">
-                           A very good job and creative thinking personality. I recommend this to everyone.
+                            Remarkable job! Every facet of the project was handled with excellence, showcasing creativity and thoughtful execution. I'm thoroughly impressed and would wholeheartedly recommend it to anyone seeking top-notch work.
+                           
                         </p>
                     </div>
 
