Modification in URL

--- a/index.html
+++ b/index.html
@@ -582,9 +582,9 @@ comprehensive solution for job seekers.
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">user@gmail.com</span>
+                            <!-- <span class="contact__card-data">singhyukta12@gmailcom</span> -->
 
-                            <a href="mailto:example@domain.com" target="_blank" class="contact__button">
+                            <a href="singhyukta12@gmail.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -594,8 +594,7 @@ comprehensive solution for job seekers.
                         <div class="contact__card">
                             <i class='bx bxl-twitter contact__card-icon'></i>
                             <h3 class="contact__card-title">Twitter</h3>
-                            <span class="contact__card-data">user</span>
-
+                           
                             <a href=" https://x.com/YuktaSi24887678?t=abD06u8zlQs6f8xASrw3dQ&s=08" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
